# MMC5983-rs

./: Cargo.toml  README.md
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/manyhow/: all.html  attr.manyhow.html  fn.attribute.html  fn.derive.html  fn.function.html  fn.to_tokens_span_range.html  index.html  macro.attribute.html  macro.bail.html  macro.derive.html  macro.emit.html  macro.ensure.html  macro.error_message.html  macro.function.html  macro.span_range.html  struct.Emitter.html  struct.Error.html  struct.ErrorMessage.html  struct.SilentError.html  trait.AnyTokenStream.html  trait.Attachment.html  trait.AttributeMacroHandler.html  trait.DeriveMacroHandler.html  trait.FunctionMacroHandler.html  trait.JoinToTokensError.html  trait.MacroOutput.html  trait.ResultExt.html  trait.SpanRanged.html  trait.ToTokensError.html  type.Result.html
doc/manyhow_macros/: all.html  attr.manyhow.html  index.html
doc/maybe_async_cfg/: all.html  attr.maybe.html  attr.noop.html  attr.only_if.html  attr.remove.html  attr.remove_if.html  index.html  macro.content.html
doc/mmc5983_rs/: all.html  enum.BandwidthMode.html  enum.Error.html  enum.MagMode.html  enum.MagOutputDataRate.html  enum.SetResetPeriod.html  index.html  sidebar-items.js  struct.MagneticField.html  struct.Mmc5983.html  struct.ProductId.html  struct.Status.html  struct.Temperature.html
doc/proc_macro_utils/: all.html  index.html  macro.assert_expansion.html  macro.assert_tokens.html  struct.TokenParser.html  (+7 more)
examples/: microbit-v2.rs  navigator.rs
src/: lib.rs
(+164 files in other folders)
